--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the project in this repository 
 
 George Godstime <georgegodstime62@gmail.com>
-Abigail Opoku <acheapomaa.abigail.opoku@gmail.com>
+Che O'Neal  <kzprince1234@gmail.com>
